# whatsapp-archive-browse

./: .flake8  .gitattributes  .gitignore  FORMAT.md  LICENSE.txt  PLAN.md  PLAN2.md  README.md  build.sh  fix_imports.sh  migrate_2_suffix.sh  pyproject.toml  requirements-dev.txt
demo-chat/: _chat.txt  hexdump-C-_chat.txt
docs/: chat-format.md  plan.md  technical-documentation.md  testing-approach.md
src/: chat_data.py  chat_data2.py  chat_vfs_merge.py  css.py  data_comparator.py  data_comparator2.py  html_generator.py  html_generator2.py  input_scanner.py  input_scanner2.py  logging_util.py  main.py  main2.py  media_locator.py  message_processor.py  metadata_updater.py  metadata_updater2.py  output_checker.py  output_checker2.py  output_dependency_checker.py  output_file_generator.py  parser.py  parser2.py  vfs.py  vfs_scanner.py  zip_utils.py
tests/: conftest.py  test_chat_data.py  test_chat_data2.py  test_data_comparator.py  test_data_comparator2.py  test_html_generator.py  test_html_generator2.py  test_input_scanner.py  test_input_scanner2.py  test_integration.py  test_media_locator.py  test_message_processor.py  test_metadata_updater.py  test_metadata_updater2.py  test_parser.py  test_parser2.py  test_vfs_scanner.py  test_zip_support.py
tests/resources/: chat.json  sample_chat_data.json  sample_chat_data2.json
tests/resources/reference_output/basic_test/: browseability-generator-chat-data.json  index.html
tests/resources/reference_output/basic_test/Space Rocket/: 2022.html
tests/resources/reference_output/duplicated_chat_test/: browseability-generator-chat-data.json  browseability-generator.css
tests/resources/reference_output/duplicated_chat_test/Space Rocket/: 2022.html  2024.html
tests/resources/reference_output/incremental_new_chat_test/: browseability-generator-chat-data.json  index.html
tests/resources/reference_output/incremental_new_chat_test/Space Rocket/: 2024.html
tests/resources/reference_output/incremental_removed_chat_test/: browseability-generator-chat-data.json  index.html
tests/resources/reference_output/incremental_removed_chat_test/Game Club/: 2022.html  index.html
tests/resources/reference_output/incremental_removed_chat_test/Space Rocket/: index.html
tests/resources/reference_output/incremental_updated_chat_test/: browseability-generator-chat-data.json  index.html
tests/resources/reference_output/incremental_updated_chat_test/Space Rocket/: 2022.html  index.html
tests/resources/reference_output/invalid_chat_test/: browseability-generator-chat-data.json
tests/resources/reference_output/invalid_chat_test/Space Rocket/: 2022.html
tests/resources/reference_output/overlapping_chat_test/: browseability-generator-chat-data.json  browseability-generator.css  index.html
tests/resources/reference_output/overlapping_chat_test/Space Rocket/: 2022.html  2024.html  index.html
tests/resources/reference_output/overlapping_chat_test/Unknown Chat/: 2022.html  2024.html  index.html
tests/resources/reference_output/zip_test/: browseability-generator-chat-data.json
tests/utils/: css_setup.py  output_verification.py  test_env.py  test_input.py
